# 125-Reports

./: .gitignore  App.js  app.json  package-lock.json  package.json
backend/: Makefile  main.py  pyproject.toml
backend/addresses/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/companies/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/equipment/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/equipments/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/example/: Makefile  db_connector.py  main.py  pyproject.toml
backend/measures/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/photos/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/ptrs/: db_connector.py  fastapi_models.py  main.py  testapi.py
backend/reports/: Makefile  db_connector.py  main.py  pyproject.toml  testapi.py
backend/user/: Makefile  db_connector.py  main.py  testapi.py
backend/users/: Makefile  db_connector.py  fastapi_models.py  main.py  pyproject.toml  testapi.py
db_manager/: Makefile  alembic.ini  conftest.py  pyproject.toml
db_manager/alembic/: env.py
db_manager/alembic/versions/: 24c7c6615e33_adds_photos.py  9cd0959e1465_initial_config.py
libs/connector/: pyproject.toml  setup.cfg
libs/connector/connector/: __init__.py  db_connector.py
libs/models/: models.py  pyproject.toml  setup.cfg
src/Components/: Footer.js  Header.js
src/config/: firebase.js
src/screens/: ChosenTask.js  CreateReport.js  Home.js  Login.js  MyCamera.js  ReportDetails.js  Settings.js  UploadCloud.js  ViewReports.js
src/styles/: styles.js
src/tests/: DownloadRelatorio.test.js
