[tool.poetry]
name = "db_manager"
version = "0.1.0"
description = ""
authors = ["lhzuin <luishenriquezuinruiz@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.3"
connector = {path = "../libs/connector"}
models = {path = "../libs/models"}


[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-alembic = "^0.9.1"
pytest-mock-resources = "^2.6.3"
python-on-whales = "^0.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
